--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,20 +48,21 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "androidx.legacy:legacy-support-v4:$androidXLegacySupport"
     implementation "androidx.annotation:annotation:$androidXAnnotations"
-
     implementation "androidx.cardview:cardview:$cardVersion"
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
-
     implementation 'com.google.code.gson:gson:2.9.0'
-
     // Architecture Components
+    //Room dependencies
+    implementation "androidx.room:room-ktx:$roomVersion"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    //Coroutines Dependencies
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
     //Navigation dependencies
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
-    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersionExtenstions"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
@@ -69,22 +70,18 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
     implementation "androidx.test.espresso:espresso-idling-resource:$espressoVersion"
-
-    //Room dependencies
-    implementation "androidx.room:room-ktx:$roomVersion"
-    implementation "androidx.room:room-runtime:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
-
-    //Coroutines Dependencies
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-
+    //Maps & Geofencing
+    implementation "com.google.android.gms:play-services-location:$playServicesVersionLocation"
+    implementation "com.google.android.gms:play-services-maps:$playServicesVersionMaps"
+    //Firebase
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     //Koin
     implementation "io.insert-koin:koin-android:$koinVersion"
     testImplementation "io.insert-koin:koin-test:$koinVersion"
     androidTestImplementation "io.insert-koin:koin-test:$koinVersion"
     // Koin for JUnit 4
     androidTestImplementation "io.insert-koin:koin-test-junit4:$koinVersion"
-
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
@@ -94,12 +91,10 @@ dependencies {
     testImplementation "org.robolectric:robolectric:$robolectricVersion"
     testImplementation "com.google.truth:truth:$truthVersion"
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
-
     // AndroidX Test - JVM testing
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
     testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
     testImplementation "androidx.test:rules:$androidXTestRulesVersion"
-
     // AndroidX Test - Instrumented testing
     androidTestImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
     androidTestImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
@@ -117,13 +112,8 @@ dependencies {
     implementation "androidx.test:core:$androidXTestCoreVersion"
     implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
     androidTestImplementation "org.mockito:mockito-android:$mockitoVersion"
-
-    //Maps & Geofencing
-    implementation "com.google.android.gms:play-services-location:$playServicesVersionLocation"
-    implementation "com.google.android.gms:play-services-maps:$playServicesVersionMaps"
-
-    androidTestImplementation "org.robolectric:shadows-framework:4.9"
-    androidTestImplementation "androidx.test:runner:1.5.0"
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation "androidx.test:runner:1.5.0"
+    androidTestImplementation "org.robolectric:shadows-framework:4.9"
 }
